fix close-button &  padding

--- a/src/partials/franchise.html
+++ b/src/partials/franchise.html
@@ -2,10 +2,15 @@
 <div class="modal modal-franchise" data-modal="4">
 
     <!-- <button class="button-close"> -->
-      <svg
+      <!-- <svg
         data-modal-close
            class="modal__close js-modal-close"><use xlink:href="./images/svg/symbol-defs.svg#icon-close">
-      </svg>
+      </svg> -->
+
+     <svg
+    data-modal-close
+    class="modal__close js-modal-close"><use xlink:href="./images/svg/symbol-defs.svg#icon-close"></svg>
+
     <!-- </button> -->
     <p class="modal_label">
       Thank you for your interest in owning an Ice Cream shop
