--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,6 +1,13 @@
 .customer-reviews {
-  margin-top: 80px;
   padding-bottom: 40px;
+  
+    @media screen and (min-width: 768px) {
+      padding-bottom: 80px;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      padding-bottom: 100px;
+    }
 }
 
 :root {
