--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,6 +1,14 @@
 .gallery {
-    padding-bottom: 12px;
+   padding-bottom: 80px;
 
+    @media screen and (min-width: 768px) {
+        padding-bottom: 100px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding-bottom: 140px;
+    }
+    
     background-image: linear-gradient(to bottom,
                 var(--brand-green) 25%,
                 #ffffff00 25%,
