--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -92,11 +92,14 @@
     height: 11px;
     color: #131313;
     // background-color: #fff;
-    cursor: url(../images/cursor.png), pointer;
+    cursor: url(../images/cursor.png) 14 14, pointer;
     outline: none;
     @media screen and (min-width: 768px) {
       width: 14px;
       height: 14px;
+    }
+    &:focus{
+      outline: #131313;
     }
   }
 
