--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,6 @@
 <!-- About Зозуля Елена -->
 <section class="about">
+  <a name="about"></a>
   <div class="about__container container">
     <p class="about__uppertitle">tradition and love</p>
     <h2 class="about__title">how it’s made?</h2>
