--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -18,7 +18,7 @@
               >
             </li>
             <li class="about-ice-cream__anchor">
-              <a class="about-ice-cream__link link-made link" href="#advantages"
+              <a class="about-ice-cream__link link-made link" href="#about"
                 >How it's made?</a
               >
             </li>
