--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -284,11 +284,6 @@
 }
 
 .btn__list {
-  font-family: inherit;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: calc(18 / 14);
-
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -300,7 +295,12 @@
   }
 }
 
-.btn__our-locations {
+.btn__our-locations--contacts {
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(18 / 14);
+
   width: 196px;
   height: 42px;
   background: var(--brand-yellow);
@@ -325,7 +325,12 @@
   }
 }
 
-.btn__franchise {
+.btn__franchise--contacts {
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(18 / 14);
+
   width: 196px;
   height: 42px;
   background-color: transparent;
