--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -10,13 +10,8 @@
           <li class="category__item">
             <p class="adress__title">Chicago</p>
 
-            <a
-              class="adress__link link"
-              href="https://goo.gl/maps/tmbvL5t9hcsbGNjA7"
-              target="_blank"
-              rel="noreferrer, noopener"
-              >10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a
-            >
+            <a class="adress__link link" href="https://goo.gl/maps/tmbvL5t9hcsbGNjA7" target="_blank"
+              rel="noreferrer, noopener">10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a>
           </li>
           <li class="category__item">
             <ul class="week__list list">
@@ -33,17 +28,11 @@
           <li class="category__item">
             <ul class="category-contacts__list list">
               <li class="category-contacts__item">
-                <a
-                  class="category-contacts__link--phone link"
-                  href="tel:+61(0)383766284"
-                  >+61(0) 383 766 284
+                <a class="category-contacts__link--phone link" href="tel:+61(0)383766284">+61(0) 383 766 284
                 </a>
               </li>
               <li class="category-contacts__item">
-                <a
-                  class="category-contacts__link--mail link"
-                  href="mailto:noreply@envato.com"
-                  >noreply@envato.com
+                <a class="category-contacts__link--mail link" href="mailto:noreply@envato.com">noreply@envato.com
                 </a>
               </li>
             </ul>
@@ -59,13 +48,8 @@
           <li class="category__item">
             <p class="adress__title">Los Angeles</p>
 
-            <a
-              class="adress__link link"
-              href="https://goo.gl/maps/bmUvpt7vANMGbiNu7"
-              target="_blank"
-              rel="noreferrer, noopener"
-              >1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a
-            >
+            <a class="adress__link link" href="https://goo.gl/maps/bmUvpt7vANMGbiNu7" target="_blank"
+              rel="noreferrer, noopener">1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a>
           </li>
           <li class="category__item">
             <ul class="week__list list">
@@ -82,17 +66,11 @@
           <li class="category__item">
             <ul class="category-contacts__list list">
               <li class="category-contacts__item">
-                <a
-                  class="category-contacts__link--phone link"
-                  href="tel:+61(0)383766284"
-                  >+61(0) 383 766 284
+                <a class="category-contacts__link--phone link" href="tel:+61(0)383766284">+61(0) 383 766 284
                 </a>
               </li>
               <li class="category-contacts__item">
-                <a
-                  class="category-contacts__link--mail link"
-                  href="mailto:noreply@envato.com"
-                  >noreply@envato.com
+                <a class="category-contacts__link--mail link" href="mailto:noreply@envato.com">noreply@envato.com
                 </a>
               </li>
             </ul>
@@ -108,13 +86,8 @@
           <li class="category__item">
             <p class="adress__title">New York</p>
 
-            <a
-              class="adress__link link"
-              href="https://goo.gl/maps/wUkAEZUEa4P9VVAH8"
-              target="_blank"
-              rel="noreferrer, noopener"
-              >726 Sterling Pl, Brooklyn, NY 11222, USA</a
-            >
+            <a class="adress__link link" href="https://goo.gl/maps/wUkAEZUEa4P9VVAH8" target="_blank"
+              rel="noreferrer, noopener">726 Sterling Pl, Brooklyn, NY 11222, USA</a>
           </li>
           <li class="category__item">
             <ul class="week__list list">
@@ -131,17 +104,11 @@
           <li class="category__item">
             <ul class="category-contacts__list list">
               <li class="category-contacts__item">
-                <a
-                  class="category-contacts__link--phone link"
-                  href="tel:+61(0)383766284"
-                  >+61(0) 383 766 284
+                <a class="category-contacts__link--phone link" href="tel:+61(0)383766284">+61(0) 383 766 284
                 </a>
               </li>
               <li class="category-contacts__item">
-                <a
-                  class="category-contacts__link--mail link"
-                  href="mailto:noreply@envato.com"
-                  >noreply@envato.com
+                <a class="category-contacts__link--mail link" href="mailto:noreply@envato.com">noreply@envato.com
                 </a>
               </li>
             </ul>
@@ -153,22 +120,18 @@
   <div class="btn">
     <ul class="btn__list list">
       <li class="btn__item">
-        <button class="btn__our-locations js-open-modal" data-modal="5">
+        <button class="btn__our-locations btn__our-locations--contacts js-open-modal" data-modal="5">
           Our Locations
           <svg class="svg-icon" width="12" height="12">
-            <use
-              xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"
-            ></use>
+            <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
           </svg>
         </button>
       </li>
       <li class="btn__item">
-        <button class="btn__franchise js-open-modal" data-modal="4">
+        <button class="btn__franchise btn__franchise--contacts js-open-modal" data-modal="4">
           Franchise
           <svg class="svg-icon" width="12" height="12">
-            <use
-              xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"
-            ></use>
+            <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
           </svg>
         </button>
       </li>
