--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,6 +1,8 @@
 .products__container {
   padding: 0 20px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 .products__lable {
@@ -42,12 +44,13 @@
 
   @media screen and (min-width: 1200px) {
     margin-bottom: 175px;
+    margin-bottom: 303px;
   }
 }
 
 .products__name {
+  display: block;
   font-family: 'Montserrat';
-  margin-top: -50px;
   margin-bottom: 40px;
   font-weight: 700;
   font-size: 20px;
@@ -58,320 +61,377 @@
   letter-spacing: 0.04em;
 
   @media screen and (min-width: 768px) {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
   }
 
   @media screen and (min-width: 1200px) {
     font-size: 30px;
     line-height: 1.23;
-    margin-top: -40px;
-  }
-}
-
-.products__text {
-  margin-left: auto;
-  margin-right: auto;
-  font-family: 'Montserrat';
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.78;
-  text-align: center;
-  color: var(--brand-black);
-  letter-spacing: 0.04em;
-  padding-left: 40px;
-  padding-right: 40px;
-  margin-bottom: 73px;
-
-  @media screen and (min-width: 1200px) {
-    font-size: 16px;
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-}
-
-.products__text--cream {
-  margin-bottom: 135px;
-
-  @media screen and(min-width: 768px) {
-    margin-bottom: 58px;
-  }
-
-  @media screen and(min-width: 1200px) {
-    margin-bottom: 94px;
-  }
-}
-
-.products__text--coffee {
-  margin-bottom: 93px;
-
-  @media screen and(min-width: 768px) {
-    margin-bottom: 9px;
-  }
-
-  @media screen and(min-width: 1200px) {
-    margin-bottom: 68px;
-  }
-}
-
-.products__text--milkshakes {
-  margin-bottom: 93px;
-
-  @media screen and(min-width: 768px) {
-    margin-bottom: 9px;
-  }
-
-  @media screen and(min-width: 1200px) {
     margin-bottom: 66px;
   }
 }
 
-.products__list {
-  padding-left: 0; //       ИЗМЕНЕНО ПАШЕЙ
-  padding-bottom: 60px;
-  list-style: none; //       ИЗМЕНЕНО ПАШЕЙ
+.products__text {
+  display: block;
+  font-family: 'Montserrat';
+  font-weight: 400;
+  font-size: 14px;
+  line-height: calc(28 / 16);
+  text-align: center;
+  color: var(--brand-black);
+  letter-spacing: 0.04em;
+  width: 200px;
 
-  @media screen and(min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
-    padding-bottom: 80px;
+  flex-grow: 1;
+  @media (min-width: 768px){
+    width: 172px;
   }
-
-  @media screen and(min-width: 1200px) {
-    gap: 29px;
-    padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    width: 246px;
+    height: 142px;
   }
 }
 
-.products__item {
-  margin-bottom: 164px;
-  margin-left: auto;
-  margin-right: auto;
+// .products__text--cream {
+//   // margin-bottom: 135px;
+//   // flex-grow: 1;
 
-  @media screen and(min-width: 768px) {
+//   @media screen and(min-width: 768px) {
+//     // margin-bottom: 58px;
+//   }
+
+//   @media screen and(min-width: 1200px) {
+//     // margin-bottom: 94px;
+//   }
+// }
+
+// .products__text--coffee {
+//   // margin-bottom: 93px;
+
+//   @media screen and(min-width: 768px) {
+//     // margin-bottom: 9px;
+//   }
+
+//   @media screen and(min-width: 1200px) {
+//     // margin-bottom: 68px;
+//   }
+// }
+
+// .products__text--milkshakes {
+//   // margin-bottom: 93px;
+
+//   @media screen and(min-width: 768px) {
+//     // margin-bottom: 9px;
+//   }
+
+//   @media screen and(min-width: 1200px) {
+//     // margin-bottom: 66px;
+//   }
+//   }
+
+  .products__list {
+    padding-left: 0;
+    padding-bottom: 60px;
+    list-style: none;
+    margin-bottom: 0;
+  
+
+    @media screen and(min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+
+      flex-wrap: nowrap;
+    }
+
+    @media screen and(min-width: 1200px) {
+      gap: 29px;
+
+    }
+  }
+
+  .products__item {
+    // margin-bottom: 164px;
+    margin-left: auto;
+    margin-right: auto;
+
+
+    @media screen and(min-width: 768px) {
+      // margin-bottom: 0;
+    }
+  }
+
+  .products__item:last-child {
     margin-bottom: 0;
   }
-}
 
-.products__item:last-child {
-  margin-bottom: 0;
-}
+  .products__item--cream {
+    position: relative;
+    background-color: var(--brand-products-1);
+    width: 280px;
+    height: 420px;
 
-.products__item--cream {
-  background-color: var(--brand-products-1);
-  width: 280px;
-  height: 528px;
+    border-radius: 24px;
+    padding:123px 0 16px 0;
+    margin-bottom: 168px;
 
-  border-radius: 24px;
+    @media screen and(min-width: 768px) {
+      width: 224px;
+      height: 428px;
+      padding: 108px 0 12px 0;
+      margin-bottom: 0;
+    }
 
-  @media screen and(min-width: 768px) {
-    width: 224px;
-    height: 428px;
-  }
-
-  @media screen and(min-width: 1200px) {
-    width: 370px;
-    height: 535px;
-  }
-}
-
-.products__item--green {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  margin-left: auto;
-  margin-right: auto;
-  top: -100px;
-
-  @media screen and(min-width: 768px) {
-    margin-bottom: -30px;
-  }
-
-  background: linear-gradient(
-      0deg,
-      rgba(156, 190, 143, 0.7),
-      rgba(156, 190, 143, 0.7)
-    ),
-    #d9d9d9;
-  box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
-  border-radius: 100.166px;
-
-  &::before {
-    display: block;
-    content: '';
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-image: url(../images/products/products-1-min.png);
-    background-size: cover;
-    position: absolute;
-    bottom: 12px;
-  }
-}
-
-.products__item--coffee {
-  background-color: var(--brand-products-2);
-  width: 280px;
-  height: 528px;
-  border-radius: 24px;
-
-  @media screen and(min-width: 768px) {
-    width: 224px;
-    height: 428px;
-  }
-
-  @media screen and(min-width: 1200px) {
-    width: 370px;
-    height: 535px;
-  }
-}
-
-.products__item--yellow {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  margin-left: auto;
-  margin-right: auto;
-  top: -100px;
-
-  @media screen and(min-width: 768px) {
-    margin-bottom: -30px;
-  }
-
-  background: linear-gradient(
-      0deg,
-      rgba(248, 210, 78, 0.7),
-      rgba(248, 210, 78, 0.7)
-    ),
-    #d9d9d9;
-  box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
-  border-radius: 100.166px;
-
-  &::before {
-    display: block;
-    content: '';
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-image: url(../images/products/products-2-min.png);
-    background-size: cover;
-    position: absolute;
-    bottom: 12px;
-  }
-}
-
-.products__item--milkshakes {
-  padding-bottom: 60px;
-  background-color: var(--brand-products-3);
-  width: 280px;
-  height: 528px;
-  border-radius: 24px;
-
-  @media screen and(min-width: 768px) {
-    width: 224px;
-    height: 428px;
-  }
-
-  @media screen and(min-width: 1200px) {
-    width: 370px;
-    height: 535px;
-  }
-}
-
-.products__item--brown {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  margin-left: auto;
-  margin-right: auto;
-  top: -100px;
-
-  @media screen and(min-width: 768px) {
-    margin-bottom: -30px;
-  }
-
-  background: linear-gradient(
-      0deg,
-      rgba(213, 117, 63, 0.7),
-      rgba(213, 117, 63, 0.7)
-    ),
-    #d9d9d9;
-  box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
-  border-radius: 100.166px;
-
-  &::before {
-    display: block;
-    content: '';
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-image: url(../images/products/products-3-min.png);
-    background-size: cover;
-    position: absolute;
-    bottom: 12px;
-  }
-}
-
-.products__item-align {
-  margin-top: 0px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  @media screen and (min-width: 768px) {
-    margin-top: 0px;
-  }
-}
-.products__milkshakes {
-  padding-bottom: 60px;
-}
-
-.product__btn {
-  transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.products__icon {
-  width: 40px;
-  height: 20px;
-
-  .product__btn:hover & {
-    width: 50px;
-  }
-
-  .product__btn:focus & {
-    width: 50px;
-  }
-}
-
-.products__svg {
-  &:first-child {
-    display: block;
-
-    .product__btn:focus & {
-      display: none;
+    @media screen and(min-width: 1200px) {
+      width: 370px;
+      height: 535px;
+      padding: 165px 0 60px 0;
     }
   }
 
-  &:last-child {
-    display: none;
+  .products__item--green {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    top: -100px;
+    left:50%;
+    z-index: 1;
+    transform:translateX(-50%);
 
-    .product__btn:focus & {
+    @media screen and(min-width: 768px) {
+      margin-bottom: 0px;
+    }
+    @media (min-width: 1200px) {
+      border-radius: 50%;
+      width: 302px;
+      height: 302px;
+      top: -170px;
+    }
+
+    background: linear-gradient(
+        0deg,
+        rgba(156, 190, 143, 0.7),
+        rgba(156, 190, 143, 0.7)
+      ),
+      #d9d9d9;
+    box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
+    border-radius: 100.166px;
+
+    &::before {
       display: block;
+      content: '';
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      background-image: url(../images/products/products-1-min.png);
+      background-size: cover;
+      position: absolute;
+      bottom: 12px;
+      @media (min-width: 1200px) {
+        width: 302px;
+        height: 302px;
+      }
     }
   }
-}
 
-.product__btn--cream {
-  background-color: var(--brand-products-1);
-  border: none;
-}
+  .products__item--coffee {
+    position: relative;
+    background-color: var(--brand-products-2);
+    width: 280px;
+    height: 420px;
+    border-radius: 24px;
+    padding: 123px 0 16px 0;
+    margin-bottom: 168px;
 
-.product__btn--coffee {
-  background-color: var(--brand-products-2);
-  border: none;
-}
+    @media screen and(min-width: 768px) {
+      width: 224px;
+      height: 428px;
+      padding: 108px 0 12px 0;
+      margin-bottom: 0;
+    }
 
-.product__btn--milkshakes {
-  background-color: var(--brand-products-3);
-  border: none;
-}
+    @media screen and(min-width: 1200px) {
+      width: 370px;
+      height: 535px;
+      padding: 165px 0 60px 0;
+    }
+  }
+
+  .products__item--yellow {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    top: -100px;
+    left: 50%;
+    z-index: 1;
+    transform:translateX(-50%);
+
+    @media screen and(min-width: 768px) {
+      margin-bottom: -30px;
+    }
+    @media (min-width: 1200px) {
+      border-radius: 50%;
+      width: 302px;
+      height: 302px;
+      top: -170px;
+    }
+
+    background: linear-gradient(
+        0deg,
+        rgba(248, 210, 78, 0.7),
+        rgba(248, 210, 78, 0.7)
+      ),
+      #d9d9d9;
+    box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
+    border-radius: 100.166px;
+
+    &::before {
+      display: block;
+      content: '';
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      background-image: url(../images/products/products-2-min.png);
+      background-size: cover;
+      position: absolute;
+      bottom: 12px;
+      @media (min-width: 1200px) {
+        width: 302px;
+        height: 302px;
+      }
+    }
+  }
+
+  .products__item--milkshakes {
+    position: relative;
+    background-color: var(--brand-products-3);
+    width: 280px;
+    height: 420px;
+    border-radius: 24px;
+    padding: 123px 0 16px 0;
+
+    @media screen and(min-width: 768px) {
+      width: 224px;
+      height: 428px;
+      padding: 108px 0 12px 0;
+    }
+
+    @media screen and(min-width: 1200px) {
+      width: 370px;
+      height: 535px;
+      padding: 165px 0 60px 0;
+    }
+  }
+
+  .products__item--brown {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    top: -100px;
+    left:50%;
+    z-index: 1;
+    transform:translateX(-50%);
+
+    @media screen and(min-width: 768px) {
+      margin-bottom: -30px;
+    }
+    @media (min-width: 1200px) {
+      border-radius: 50%;
+      width: 302px;
+      height: 302px;
+      top: -170px;
+    }
+
+    background: linear-gradient(
+        0deg,
+        rgba(213, 117, 63, 0.7),
+        rgba(213, 117, 63, 0.7)
+      ),
+      #d9d9d9;
+    box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
+    border-radius: 100.166px;
+
+    &::before {
+      display: block;
+      content: '';
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      background-image: url(../images/products/products-3-min.png);
+      background-size: cover;
+      position: absolute;
+      bottom: 12px;
+      @media (min-width: 1200px) {
+        width: 302px;
+        height: 302px;
+      }
+    }
+  }
+
+  .products__item-align {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+
+  .product__btn {
+    display: block;
+    transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .products__icon {
+    width: 40px;
+    height: 20px;
+
+    .product__btn:hover & {
+      width: 50px;
+    }
+
+    .product__btn:focus & {
+      width: 50px;
+    }
+  }
+
+  .products__svg {
+    &:first-child {
+      display: block;
+
+      .product__btn:focus & {
+        display: none;
+      }
+    }
+
+    &:last-child {
+      display: none;
+
+      .product__btn:focus & {
+        display: block;
+      }
+    }
+  }
+
+  .product__btn--cream {
+    background-color: var(--brand-products-1);
+    border: none;
+  }
+
+  .product__btn--coffee {
+    background-color: var(--brand-products-2);
+    border: none;
+  }
+
+  .product__btn--milkshakes {
+    background-color: var(--brand-products-3);
+    border: none;
+  }
+
