--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -2,9 +2,12 @@
 
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid tomato;
+  // outline: 1px solid tomato;
 
   width: 100%;
+  @media(min-width:320px){
+    padding: 0 15px;
+  }
   @media screen and (max-width: 479px) {
     // padding-left: 20px;
     // padding-right: 20px;
