--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -26,13 +26,13 @@
           <a href="" class="nav__link link">Home</a>
         </li>
         <li class="nav__item">
-          <a href="" class="nav__link link">How it’s made?</a>
+          <a href="#about" class="nav__link link">How it’s made?</a>
         </li>
         <li class="nav__item">
-          <a href="" class="nav__link link">Our products</a>
+          <a href="#products" class="nav__link link">Our products</a>
         </li>
         <li class="nav__item">
-          <a href="" class="nav__link link">Contact</a>
+          <a href="#contacts" class="nav__link link">Contact</a>
         </li>
       </ul>
     </nav>
