--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -26,13 +26,13 @@
       <a href="" class="mobile__link link">Home</a>
     </li>
     <li class="mobile__item">
-      <a href="" class="mobile__link link">How it’s made?</a>
+      <a href="#about" class="mobile__link link">How it’s made?</a>
     </li>
     <li class="mobile__item">
-      <a href="" class="mobile__link link">Our products</a>
+      <a href="#products" class="mobile__link link">Our products</a>
     </li>
     <li class="mobile__item">
-      <a href="" class="mobile__link link">Contact</a>
+      <a href="#contacts" class="mobile__link link">Contact</a>
     </li>
   </ul>
   <button class="btn__buy-now menu__btn js-open-modal" data-modal="1">
