--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
 <!-- Contacts Liubomyr Vynnychuk -->
 
-<section class="contacts">
+<section class="contacts" id="contacts">
   <h2 class="contacts__title visually-hidden">Contacts</h2>
   <ul class="contacts__list list">
     <li class="contacts__item">
