franchise button black

--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -99,6 +99,7 @@
   background-color: transparent;
   border: 2px solid #f8d24e;
   border-radius: 8px;
+  color: black;
 
   &:hover {
     border: 2px solid #0a8817;
