--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -9,8 +9,8 @@ body {
   & *:hover{
     cursor: url(../images/cursor.png) 15 15, default;
   }
-
-  @media (min-width: 480px) {
+  
+  @media (min-width: 320px){
     max-width: 1600px;
     background-repeat: no-repeat;
     background-position: fixed;
@@ -25,6 +25,23 @@ body {
       (min-resolution: 2dppx) {
       background-image: url(../images/body_bg/mobile2x.png);
     }
+  }
+
+  @media (min-width: 480px) {
+    // max-width: 1600px;
+    // background-repeat: no-repeat;
+    // background-position: fixed;
+    // background-attachment: fixed;
+    // background-size: cover;
+    // z-index: -1;
+
+    // background-image: url(../images/body_bg/mobile1x.png);
+
+    // @media (min-device-pixel-ratio: 2),
+    //   (min-resolution: 192dpi),
+    //   (min-resolution: 2dppx) {
+    //   background-image: url(../images/body_bg/mobile2x.png);
+    // }
   }
   @media (min-width: 769px) {
     background-image: url(../images/body_bg/tablet1x.png);
