--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -35,6 +35,7 @@
   background-repeat: no-repeat;
   background-position: bottom center;
   height: 100%;
+
   @media screen and (max-width: 767px) {
     flex-direction: row;
     background-image: url(../images/hero/dots-mobile.png);
@@ -271,6 +272,7 @@
 
 .many-ice-cream__wrap .many-ice-cream__img {
   display: block;
+
   @media screen and (min-width: 768px) {
     width: 152px;
 
@@ -332,6 +334,27 @@
   right: 0;
   margin-right: 60px;
   max-width: none;
+  animation-name: grows, show;
+  animation-duration: 3s;
+  animation-timing-function: var(--transition-timing-function);
+  // @keyframes grows {
+  //   0% {
+  //     transform: scale(0.8, 0.8);
+  //   }
+
+  //   100% {
+  //     transform: scale(1, 1);
+  //   }
+  // }
+
+  @keyframes show {
+    from {
+      opacity: 0.2;
+    }
+    to {
+      opacity: 1;
+    }
+  }
 
   @media screen and (min-width: 768px) {
     width: 268px;
