--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -2,7 +2,7 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 .gallery {
   padding-bottom: 80px;
-  background-image: linear-gradient(to bottom, var(--brand-green) 25%, #ffffff00 25%, #ff000000 35%, #ff313100 35%);
+  background-image: linear-gradient(to bottom, var(--brand-green) 25%, rgba(255, 255, 255, 0) 25%, rgba(255, 0, 0, 0) 35%, rgba(255, 49, 49, 0) 35%);
 }
 @media screen and (min-width: 768px) {
   .gallery {
@@ -423,7 +423,7 @@
 .about__descriptions {
   margin: auto;
   width: 220px;
-  line-height: calc(22 / 12);
+  line-height: 1.8333333333;
   text-align: center;
   font-weight: 400;
   color: var(--brand-white);
@@ -432,7 +432,7 @@
 @media screen and (min-width: 768px) {
   .about__descriptions {
     width: 336px;
-    line-height: calc(22 / 12);
+    line-height: 1.8333333333;
     text-align: left;
     margin-bottom: 8px;
   }
@@ -441,7 +441,7 @@
   .about__descriptions {
     font-size: 16px;
     width: 463px;
-    line-height: calc(28 / 16);
+    line-height: 1.75;
   }
 }
 
@@ -449,7 +449,7 @@
   margin: auto;
   width: 220px;
   font-style: normal;
-  line-height: calc(22 / 12);
+  line-height: 1.8333333333;
   text-align: center;
   font-weight: 400;
   color: var(--brand-white);
@@ -458,7 +458,7 @@
 @media screen and (min-width: 768px) {
   .about__product {
     width: 336px;
-    line-height: calc(22 / 12);
+    line-height: 1.8333333333;
     text-align: left;
     margin-bottom: 8px;
   }
@@ -467,7 +467,7 @@
   .about__product {
     width: 463px;
     font-size: 14px;
-    line-height: calc(28 / 16);
+    line-height: 1.75;
   }
 }
 
@@ -510,7 +510,7 @@
   display: flex;
   font-weight: 600;
   font-size: 14px;
-  line-height: calc(18 / 14);
+  line-height: 1.2857142857;
   margin-left: auto;
   margin-right: auto;
   transition: background-color 250ms var(--transition-timing-function), outline 250ms var(--transition-timing-function), color 250ms var(--transition-timing-function);
@@ -690,7 +690,7 @@ body *:hover {
   font-family: "Montserrat";
   font-weight: 400;
   font-size: 14px;
-  line-height: calc(28 / 16);
+  line-height: 1.75;
   text-align: center;
   color: var(--brand-black);
   letter-spacing: 0.04em;
@@ -1136,7 +1136,7 @@ body *:hover {
   font-family: inherit;
   font-weight: 500;
   font-size: 12px;
-  line-height: calc(14 / 12);
+  line-height: 1.1666666667;
   align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
@@ -1145,7 +1145,7 @@ body *:hover {
 @media screen and (min-width: 768px) {
   .category__title {
     font-size: 16px;
-    line-height: calc(22 / 16);
+    line-height: 1.375;
     margin-bottom: 32px;
   }
 }
@@ -1166,7 +1166,7 @@ body *:hover {
   font-family: inherit;
   font-weight: 500;
   font-size: 12px;
-  line-height: calc(22 / 12);
+  line-height: 1.8333333333;
   letter-spacing: 0.04em;
   color: var(--brand-black);
   margin-bottom: 8px;
@@ -1179,13 +1179,13 @@ body *:hover {
 @media screen and (min-width: 768px) {
   .adress__title {
     font-size: 14px;
-    line-height: calc(26 / 14);
+    line-height: 1.8571428571;
   }
 }
 @media screen and (min-width: 1200px) {
   .adress__title {
     font-size: 16px;
-    line-height: calc(30 / 16);
+    line-height: 1.875;
   }
 }
 
@@ -1193,7 +1193,7 @@ body *:hover {
   font-family: inherit;
   font-weight: 500;
   font-size: 12px;
-  line-height: calc(22 / 12);
+  line-height: 1.8333333333;
   letter-spacing: 0.04em;
   color: #d6936d;
   cursor: url(../images/cursor.png), pointer;
@@ -1201,13 +1201,13 @@ body *:hover {
 @media screen and (min-width: 768px) {
   .adress__link {
     font-size: 14px;
-    line-height: calc(26 / 14);
+    line-height: 1.8571428571;
   }
 }
 @media screen and (min-width: 1200px) {
   .adress__link {
     font-size: 16px;
-    line-height: calc(29 / 16);
+    line-height: 1.8125;
   }
 }
 .adress__link:hover, .adress__link:focus {
@@ -1218,19 +1218,19 @@ body *:hover {
   font-family: inherit;
   font-weight: 500;
   font-size: 12px;
-  line-height: calc(22 / 12);
+  line-height: 1.8333333333;
   color: var(--brand-black);
 }
 @media screen and (min-width: 768px) {
   .week__title {
     font-size: 14px;
-    line-height: calc(26 / 14);
+    line-height: 1.8571428571;
   }
 }
 @media screen and (min-width: 1200px) {
   .week__title {
     font-size: 16px;
-    line-height: calc(30 / 16);
+    line-height: 1.875;
   }
 }
 
@@ -1238,20 +1238,20 @@ body *:hover {
   font-family: inherit;
   font-weight: 500;
   font-size: 12px;
-  line-height: calc(22 / 12);
+  line-height: 1.8333333333;
   color: #ababab;
   margin-bottom: 8px;
 }
 @media screen and (min-width: 768px) {
   .week__time {
     font-size: 14px;
-    line-height: calc(26 / 14);
+    line-height: 1.8571428571;
   }
 }
 @media screen and (min-width: 1200px) {
   .week__time {
     font-size: 16px;
-    line-height: calc(30 / 16);
+    line-height: 1.875;
     margin-bottom: 12px;
   }
 }
@@ -1260,18 +1260,18 @@ body *:hover {
   font-family: inherit;
   font-weight: 500;
   font-size: 12px;
-  line-height: calc(19 / 12);
+  line-height: 1.5833333333;
 }
 @media screen and (min-width: 768px) {
   .category-contacts__item {
     font-size: 14px;
-    line-height: calc(21 / 14);
+    line-height: 1.5;
   }
 }
 @media screen and (min-width: 1200px) {
   .category-contacts__item {
     font-size: 16px;
-    line-height: calc(24 / 16);
+    line-height: 1.5;
   }
 }
 
@@ -1306,7 +1306,7 @@ body *:hover {
   font-family: inherit;
   font-weight: 600;
   font-size: 14px;
-  line-height: calc(18 / 14);
+  line-height: 1.2857142857;
   width: 196px;
   height: 42px;
   background: var(--brand-yellow);
@@ -1329,7 +1329,7 @@ body *:hover {
   font-family: inherit;
   font-weight: 600;
   font-size: 14px;
-  line-height: calc(18 / 14);
+  line-height: 1.2857142857;
   width: 196px;
   height: 42px;
   background-color: transparent;
@@ -2299,6 +2299,42 @@ a {
   right: 0;
   margin-right: 60px;
   max-width: none;
+  -webkit-animation-name: grows, show;
+          animation-name: grows, show;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+}
+@-webkit-keyframes grows {
+  0% {
+    transform: perspective(400px) rotateY(60deg);
+  }
+  100% {
+    transform: perspective(400px) rotateY(-60deg);
+  }
+}
+@keyframes grows {
+  0% {
+    transform: perspective(400px) rotateY(60deg);
+  }
+  100% {
+    transform: perspective(400px) rotateY(-60deg);
+  }
+}
+@-webkit-keyframes show {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes show {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 1;
+  }
 }
 @media screen and (min-width: 768px) {
   .container-center .ice-creame-conus {
@@ -2423,8 +2459,7 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 30;
-  /* Должен быть выше чем у подложки*/
+  z-index: 30; /* Должен быть выше чем у подложки*/
   /*  Побочные стили   */
   box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
   text-align: center;
@@ -2572,8 +2607,7 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 30;
-  /* Должен быть выше чем у подложки*/
+  z-index: 30; /* Должен быть выше чем у подложки*/
   /*  Побочные стили   */
   box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
   text-align: center;
@@ -2723,12 +2757,12 @@ a {
 .about-product__value {
   font-weight: 500;
   font-size: 10px;
-  line-height: calc(28 / 10);
+  line-height: 2.8;
 }
 @media screen and (min-width: 768px) {
   .about-product__value {
     font-size: 12px;
-    line-height: calc(28 / 12);
+    line-height: 2.3333333333;
   }
 }
 
@@ -2767,7 +2801,7 @@ a {
 .ingredients-title {
   font-weight: 500;
   font-size: 20px;
-  line-height: calc(28 / 20);
+  line-height: 1.4;
   margin-bottom: 24px;
 }
 
@@ -2886,7 +2920,7 @@ a {
   padding: 12px 34px;
   font-weight: 600;
   font-size: 12px;
-  line-height: calc(15 / 12);
+  line-height: 1.25;
   color: #131313;
   border: none;
   border-radius: 10px;
@@ -2932,8 +2966,7 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 999;
-  /* Должен быть выше чем у подложки*/
+  z-index: 999; /* Должен быть выше чем у подложки*/
   /*  Побочные стили   */
   box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
   text-align: center;
@@ -3067,7 +3100,7 @@ a {
 .buy-now__text {
   font-weight: 700;
   font-size: 16px;
-  line-height: calc(20 / 16);
+  line-height: 1.25;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #131313;
@@ -3161,7 +3194,7 @@ a {
   padding: 12px 34px;
   font-weight: 600;
   font-size: 12px;
-  line-height: calc(15 / 12);
+  line-height: 1.25;
   color: #131313;
   border: none;
   border-radius: 10px;
@@ -3304,7 +3337,7 @@ a {
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
-  line-height: calc(44/36);
+  line-height: 1.2222222222;
   /* identical to box height */
   text-align: center;
   letter-spacing: 0.04em;
@@ -3314,14 +3347,14 @@ a {
 @media (min-width: 769px) {
   .advantages__item__title {
     font-size: 48px;
-    line-height: calc(59/48);
+    line-height: 1.2291666667;
     margin-bottom: 12px;
   }
 }
 @media (min-width: 1200px) {
   .advantages__item__title {
     font-size: 58px;
-    line-height: calc(71/58);
+    line-height: 1.224137931;
     margin-bottom: 12px;
   }
 }
@@ -3331,7 +3364,7 @@ a {
   font-style: normal;
   font-weight: 700;
   font-size: 12px;
-  line-height: calc(20/12);
+  line-height: 1.6666666667;
   /* or 20px */
   text-align: center;
   color: var(--brand-white);
@@ -3530,8 +3563,7 @@ a {
   background-color: #fcfcfc;
   border: 2px solid #f8d24e;
   border-radius: 10px;
-  z-index: 999;
-  /* Должен быть выше чем у подложки*/
+  z-index: 999; /* Должен быть выше чем у подложки*/
 }
 @media screen and (min-width: 768px) {
   .modal-franchise {
