--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -14,7 +14,7 @@ body {
     max-width: 1600px;
     background-repeat: no-repeat;
     background-position: fixed;
-    background-attachment: fixed;
+    // background-attachment: fixed;
     background-size: cover;
     z-index: -1;
 
@@ -28,20 +28,20 @@ body {
   }
 
   @media (min-width: 480px) {
-    // max-width: 1600px;
-    // background-repeat: no-repeat;
-    // background-position: fixed;
-    // background-attachment: fixed;
-    // background-size: cover;
-    // z-index: -1;
+    max-width: 1600px;
+    background-repeat: no-repeat;
+    background-position: fixed;
+    background-attachment: fixed;
+    background-size: cover;
+    z-index: -1;
 
-    // background-image: url(../images/body_bg/mobile1x.png);
+    background-image: url(../images/body_bg/mobile1x.png);
 
-    // @media (min-device-pixel-ratio: 2),
-    //   (min-resolution: 192dpi),
-    //   (min-resolution: 2dppx) {
-    //   background-image: url(../images/body_bg/mobile2x.png);
-    // }
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/body_bg/mobile2x.png);
+    }
   }
   @media (min-width: 769px) {
     background-image: url(../images/body_bg/tablet1x.png);
