--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -575,13 +575,28 @@ body *:hover {
     max-width: 1600px;
     background-repeat: no-repeat;
     background-position: fixed;
-    background-attachment: fixed;
     background-size: cover;
     z-index: -1;
     background-image: url(../images/body_bg/mobile1x.png);
   }
 }
 @media (min-width: 320px) and (min-device-pixel-ratio: 2), (min-width: 320px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 320px) and (min-resolution: 192dpi), (min-width: 320px) and (min-resolution: 2dppx) {
+  body {
+    background-image: url(../images/body_bg/mobile2x.png);
+  }
+}
+@media (min-width: 480px) {
+  body {
+    max-width: 1600px;
+    background-repeat: no-repeat;
+    background-position: fixed;
+    background-attachment: fixed;
+    background-size: cover;
+    z-index: -1;
+    background-image: url(../images/body_bg/mobile1x.png);
+  }
+}
+@media (min-width: 480px) and (min-device-pixel-ratio: 2), (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 480px) and (min-resolution: 192dpi), (min-width: 480px) and (min-resolution: 2dppx) {
   body {
     background-image: url(../images/body_bg/mobile2x.png);
   }
