--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -31,7 +31,7 @@ body {
     max-width: 1600px;
     background-repeat: no-repeat;
     background-position: fixed;
-    background-attachment: fixed;
+    // background-attachment: fixed;
     background-size: cover;
     z-index: -1;
 
@@ -44,6 +44,7 @@ body {
     }
   }
   @media (min-width: 769px) {
+    background-attachment: fixed;
     background-image: url(../images/body_bg/tablet1x.png);
 
     @media (min-device-pixel-ratio: 2),
