--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -574,7 +574,7 @@ body *:hover {
   body {
     max-width: 1600px;
     background-repeat: no-repeat;
-    background-position: fixed;
+    background-position: center;
     background-size: cover;
     z-index: -1;
     background-image: url(../images/body_bg/mobile1x.png);
@@ -590,6 +590,7 @@ body *:hover {
     max-width: 1600px;
     background-repeat: no-repeat;
     background-position: fixed;
+    background-attachment: fixed;
     background-size: cover;
     z-index: -1;
     background-image: url(../images/body_bg/mobile1x.png);
