--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -12,10 +12,10 @@ body {
   
   @media (min-width: 300px){
     max-width: 1600px;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-position: center;
     // background-attachment: fixed;
-    background-size: cover;
+    background-size: contain;
     z-index: -1;
 
     background-image: url(../images/body_bg/mobile1x.png);
