ошибки от ментора

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,6 @@
 <!-- Products Уточкіна Катерина -->
-<section class="products" id="products">
+<section class="products">
+  <a name="products"></a>
   <div class="container products__container">
     <p class="products__lable">100% natural</p>
     <h2 class="products__title">Products</h2>
