--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,7 +1,11 @@
+.products{
+  padding: 61px 0px 50px 0px;
+}
 .products__container {
   padding: 0 20px;
   margin-left: auto;
   margin-right: auto;
+  // padding: 61px 20px 50px 20px;
 
 }
 
@@ -14,7 +18,7 @@
   text-transform: uppercase;
   color: var(--brand-black);
   margin-bottom: 12px;
-  padding-top: 60px;
+  // padding-top: 60px;
 
   @media screen and (min-width: 768px) {
     font-size: 22px;
@@ -400,21 +404,20 @@
 
   .product__btn {
     display: block;
-    transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms linear;
+      transform: scale(1);
+  }
+  .product__btn:hover {
+    transform: scale(1.25);
+  }
+
+  .product__btn:focus {
+    transform: scale(1.25);
   }
 
   .products__icon {
     width: 40px;
     height: 20px;
-
-    .product__btn:hover & {
-      width: 50px;
-    }
-
-    .product__btn:focus & {
-      width: 50px;
-    }
   }
 
   .products__svg {
