--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -572,8 +572,7 @@ body *:hover {
 }
 @media (min-width: 300px) {
   body {
-    max-width: 1600px;
-    background-repeat: repeat;
+    background-repeat: repeatnpm;
     background-position: center;
     background-size: contain;
     z-index: -1;
@@ -587,7 +586,6 @@ body *:hover {
 }
 @media (min-width: 480px) {
   body {
-    max-width: 1600px;
     background-repeat: no-repeat;
     background-position: fixed;
     background-attachment: fixed;
@@ -623,6 +621,10 @@ body *:hover {
   }
 }
 
+.products {
+  padding: 61px 0px 50px 0px;
+}
+
 .products__container {
   padding: 0 20px;
   margin-left: auto;
@@ -638,7 +640,6 @@ body *:hover {
   text-transform: uppercase;
   color: var(--brand-black);
   margin-bottom: 12px;
-  padding-top: 60px;
 }
 @media screen and (min-width: 768px) {
   .products__lable {
@@ -986,18 +987,21 @@ body *:hover {
 
 .product__btn {
   display: block;
-  transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms linear;
+  transform: scale(1);
+}
+
+.product__btn:hover {
+  transform: scale(1.25);
+}
+
+.product__btn:focus {
+  transform: scale(1.25);
 }
 
 .products__icon {
   width: 40px;
   height: 20px;
-}
-.product__btn:hover .products__icon {
-  width: 50px;
-}
-.product__btn:focus .products__icon {
-  width: 50px;
 }
 
 .products__svg:first-child {
@@ -1054,23 +1058,17 @@ body *:hover {
 
 .contacts {
   background: linear-gradient(to bottom, transparent 0%, transparent 25%, var(--brand-green) 25%);
-  padding-left: 20px;
-  padding-right: 20px;
   padding-bottom: 60px;
 }
 @media screen and (min-width: 768px) {
   .contacts {
     background: linear-gradient(to bottom, transparent 0%, transparent 45%, var(--brand-green) 45%);
-    padding-left: 32px;
-    padding-right: 32px;
     padding-bottom: 40px;
   }
 }
 @media screen and (min-width: 1200px) {
   .contacts {
     background: linear-gradient(to bottom, transparent 0%, transparent 16%, var(--brand-green) 16%);
-    padding-left: 16px;
-    padding-right: 16px;
     padding-bottom: 120px;
   }
 }
@@ -1081,18 +1079,24 @@ body *:hover {
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 @media screen and (min-width: 768px) {
   .contacts__list {
     flex-direction: row;
     gap: 16px;
     margin-bottom: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
   }
 }
 @media screen and (min-width: 1200px) {
   .contacts__list {
     gap: 32px;
     margin-bottom: 60px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
 
@@ -1486,7 +1490,7 @@ body *:hover {
 }
 
 .footer {
-  background-color: #84A178;
+  background-color: #84a178;
 }
 .footer__title {
   font-family: "Montserrat";
@@ -1494,7 +1498,7 @@ body *:hover {
   font-weight: 700;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 @media (min-width: 320px) and (max-width: 768px) {
   .footer__title {
@@ -1523,7 +1527,7 @@ body *:hover {
   font-style: normal;
   font-weight: 700;
   text-transform: uppercase;
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 @media (min-width: 320px) and (max-width: 768px) {
   .footer__title-passion {
@@ -1581,7 +1585,7 @@ body *:hover {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 @media (min-width: 320px) and (max-width: 768px) {
   .footer__link-number {
@@ -1606,7 +1610,7 @@ body *:hover {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-  color: #7A7A7A;
+  color: #7a7a7a;
   text-align: center;
 }
 @media (min-width: 320px) and (max-width: 768px) {
@@ -1700,21 +1704,25 @@ a {
 }
 
 .social-link {
-  background-color: #F8D24E;
   width: 34px;
   height: 34px;
   border-radius: 50%;
-  fill: #84A178;
+}
+
+.social-a-link {
+  background-color: #f8d24e;
+  width: 100%;
+  height: 100%;
   transition: fill 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .git {
   margin: 7px;
-  fill: #84A178;
+  fill: #84a178;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .git:hover, .git:focus {
-  fill: #FCFCFC;
+  fill: #fcfcfc;
 }
 
 .telegram {
@@ -1722,11 +1730,11 @@ a {
   margin-right: 9px;
   margin-bottom: 8px;
   margin-left: 5.5px;
-  fill: #84A178;
+  fill: #84a178;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .telegram:hover, .telegram:focus {
-  fill: #FCFCFC;
+  fill: #fcfcfc;
 }
 
 .facebook {
@@ -1734,11 +1742,11 @@ a {
   margin-bottom: 7px;
   margin-right: 12px;
   margin-left: 12px;
-  fill: #84A178;
+  fill: #84a178;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .facebook:hover, .facebook:focus {
-  fill: #FCFCFC;
+  fill: #fcfcfc;
 }
 
 @media (min-width: 768px) {
@@ -1754,7 +1762,7 @@ a {
 }
 
 .social-link a:focus svg {
-  fill: #FCFCFC;
+  fill: #fcfcfc;
 }
 
 @media (min-width: 320px) and (max-width: 1199px) {
@@ -1764,7 +1772,7 @@ a {
 }
 
 .border {
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
 }
 
 @media (min-width: 1200px) {
