--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <!-- Header Виниченко Елена -->
 <header class="header">
   <div class="header__container container">
-    <a class="header__logo" href arial label>
+    <a class="header__logo" href="">
       <img
         class="logo__img"
         srcset="
@@ -46,7 +46,7 @@
       </svg>
     </button>
     <button class="btn__buy-now header__btn js-open-modal" data-modal="1">
-      <p class="btn__content">Buy now</p>
+      <span class="btn__content">Buy now</span>
       <svg class="svg-icon" width="12" height="12">
         <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
       </svg>
