--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,11 +1,10 @@
 <section class="section hero">
-
-    <div class="hero_overlay">
-      <div class="container container__hero">
+  <div class="hero_overlay">
+    <div class="container container__hero">
       <div class="container-left">
         <h1 class="hero-title">
           ice cream made with
-          <p class="hero-title__passion">passion</p>
+          <span class="hero-title__passion">passion</span>
         </h1>
 
         <div class="about-ice-cream">
