--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1704,15 +1704,11 @@ a {
 }
 
 .social-link {
+  background-color: #f8d24e;
   width: 34px;
   height: 34px;
   border-radius: 50%;
-}
-
-.social-a-link {
-  background-color: #f8d24e;
-  width: 100%;
-  height: 100%;
+  fill: #84a178;
   transition: fill 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1756,7 +1752,7 @@ a {
 }
 
 @media (min-width: 1200px) {
-  .title_br {
+  .title__br {
     display: none;
   }
 }
