--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -41,8 +41,8 @@
           </li>
         </ul>
         <p class="footer__link-position">
-          <a target="_blank" href="" class="footer__link" text-align="right"
-            >Feel free to contact
+          <a target="_blank" href="" class="footer__link">
+            Feel free to contact
             <span class="footer__link-number"> +61 (0) 383 766 284</span></a
           >
         </p>
