--- a/src/partials/buy-now-modal.html
+++ b/src/partials/buy-now-modal.html
@@ -71,8 +71,8 @@
         <input
           class="buy-now__field"
           type="text"
-          name="user_name"
-          id="user_name"
+          name="turn_user_name"
+          id="turn_user_name"
           placeholder=" "
           required
           pattern="[a-zA-Z]{1,15}"
@@ -85,8 +85,8 @@
         <input
           class="buy-now__field"
           type="tel"
-          name="user_phone"
-          id="user_phone"
+          name="turn_user_phone"
+          id="turn_user_phone"
           placeholder=" "
           required
           pattern="[1-10]{1-15}"
@@ -98,8 +98,8 @@
       <label class="buy-now__label" for="user_message">
         <textarea
           class="buy-now__message"
-          name="user_message"
-          id="user_message"
+          name="turn_user_message"
+          id="turn_user_message"
           rows="6"
           placeholder=" "
         ></textarea>
