--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,6 +1,6 @@
 <!-- Mobile menu Виниченко Елена -->
 <div class="menu__container js-menu-container" id="mobile-menu">
-  <a class="header__logo logo__mobile" href arial label>
+  <a class="header__logo logo__mobile" href="">
     <img
       class="logo__img"
       srcset="
@@ -36,7 +36,7 @@
     </li>
   </ul>
   <button class="btn__buy-now menu__btn js-open-modal" data-modal="1">
-    <p class="btn__content">Buy now</p>
+    <span class="btn__content">Buy now</span>
     <svg class="svg-icon" width="12" height="12">
       <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
     </svg>
