--- a/src/partials/franchise.html
+++ b/src/partials/franchise.html
@@ -29,8 +29,8 @@
           <input
             class="modal-form-field"
             type="text"
-            name="user_name"
-            id="user_name"
+            name="write_user_name"
+            id="write_user_name"
             placeholder="Name"
             pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
           />
@@ -40,8 +40,8 @@
           <input
             class="modal-form-field"
             type="tel"
-            name="user_phone"
-            id="user_phone"
+            name="write_user_phone"
+            id="write_user_phone"
             placeholder="Phone"
             pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}"
             minlength="13"
@@ -53,8 +53,8 @@
           <input
             class="modal-form-field"
             type="mail"
-            name="user_mail"
-            id="user_mail"
+            name="write_user_mail"
+            id="write_user_mail"
             placeholder="Email"
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
           />
