--- a/src/partials/franchise.html
+++ b/src/partials/franchise.html
@@ -62,7 +62,7 @@
         <label class="modal-form-label" for="user_message"></label>
         <textarea
           class="modal-form-message modal-form-field"
-          name="user_message"
+          name="write_user_message"
           id="user_message"
           rows="6"
           placeholder="Comment"
