--- a/src/partials/franchise.html
+++ b/src/partials/franchise.html
@@ -52,11 +52,10 @@
         <div class="modal-form-wrapper">
           <input
             class="modal-form-field"
-            type="mail"
+            type="email"
             name="write_user_mail"
             id="write_user_mail"
-            placeholder="Email"
-            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+            placeholder="email"
           />
         </div>
         <label class="modal-form-label" for="user_message"></label>
