--- a/src/partials/buy-now-modal.html
+++ b/src/partials/buy-now-modal.html
@@ -67,7 +67,7 @@
   </ul>
   <form action="" class="buy-now__form">
     <div class="buy-now__group">
-      <label class="buy-now__label" for="user_name">
+      <label class="buy-now__label" for="turn_user_name">
         <input
           class="buy-now__field"
           type="text"
@@ -81,7 +81,7 @@
       </label>
     </div>
     <div class="buy-now__group">
-      <label class="buy-now__label" for="user_phone">
+      <label class="buy-now__label" for="turn_user_phone">
         <input
           class="buy-now__field"
           type="tel"
@@ -95,7 +95,7 @@
       </label>
     </div>
     <div class="buy-now__group">
-      <label class="buy-now__label" for="user_message">
+      <label class="buy-now__label" for="turn_user_message">
         <textarea
           class="buy-now__message"
           name="turn_user_message"
